src/test/resources/LO-2/ValidPrograms/test_80.lo
// *Good testcase*
// Arithmetic Operations
// main return value: 388
// Author: Tyler Collins


int main() {
    int a, b, c, d;
  {
    a = 1;
    b = 10;
    c = 100;
    d = 1000;

    return ((((d / 3) + (c / 2)) + (b - 6)) + a);
  }
}

