src/test/resources/LO-2/InvalidPrograms/test_4.lo
// Incorrect arguments

int main() {
    int a, b;
    {
        a = xyz(1, 2, 3);
        return a;
    }
}

int xyz(int a, int b) {
    String result;
    {
        result = "result";
        return a;
    }
}